--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,14 @@
         android:layout_height="wrap_content"
         android:id="@mipmap/utalca_logo"
         android:layout_alignParentTop="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_below="@mipmap/utalca_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="135dp" />
 </RelativeLayout>
